_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sBlockNpLb.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNpLb
metadata:
  name: block-node-port
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    labelSelector:
      matchLabels: 
        app: nginx
