_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sCapsOnReplica.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sCapsOnReplica
metadata:
  name: must-have-caps
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
  parameters:
    minReplicas: 3
    maxReplicas: 10
