_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sDisableHostNetworking.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisableHostNetworking
metadata:
  name: pods-should-not-have-host-network
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
