_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sPodPriority.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodPriority
metadata:
  name: pod-must-have-priority
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
