_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sRequiredProbes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: must-have-probes
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    probes: ["readinessProbe", "livenessProbe", "startupProbe"]
    probeTypes: ["tcpSocket", "httpGet", "exec"]
