_helm_charts/xebia/helm-xebia-opa-gatekeeper@v3.24.7/samples/K8sRunAsNonRoot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  name: container-must-run-as-non-root
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchLabels: 
        app: nginx
